# robocup-rustware

./: .gitignore  Cargo.toml  README.md  makefile  run.sh  rust-toolchain.toml  teensy_loader_cli  test.hex  text.hex
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.helix/: languages.toml
common/: Cargo.toml
common/src/: dribbler.rs  lib.rs  motor.rs  packing.rs  pid.rs
control/: Cargo.toml  demo.hex  run.sh  test.hex  text.hex
control-v2/: Cargo.toml  Embed.toml  rust-analyzer.json  rust-toolchain.toml
control-v2/.cargo/: config.toml
control-v2/drivers/icm42605/: Cargo.toml
control-v2/drivers/icm42605/src/: lib.rs  registers.rs
control-v2/src/: battery.rs  control.rs  gpio.rs  (+7 more)
control/.cargo/: config.toml
control/drivers/: README.md
control/drivers/battery_sense/: Cargo.toml
control/drivers/battery_sense/src/: error.rs  lib.rs
control/drivers/controller/: Cargo.toml
control/drivers/controller/src/: lib.rs
control/drivers/fpga/: Cargo.toml
control/drivers/fpga/src/: config_bin.rs  duty_cycle.rs  error.rs  instructions.rs  lib.rs  status.rs
control/drivers/graphics/: Cargo.toml
control/drivers/graphics/src/: battery_indicator.rs  error_screen.rs  lib.rs  screen.rs  startup_screen.rs
control/drivers/hal-extensions/: README.md
control/drivers/hal-extensions/src/: lib.rs  spi.rs
control/drivers/icm42605-driver/: Cargo.toml
control/drivers/icm42605-driver/src/: lib.rs  registers.rs
control/drivers/io_expander/src/: error.rs  lib.rs
control/drivers/kicker/: Cargo.toml
control/drivers/kicker-controller/: Cargo.toml
control/drivers/kicker-controller/src/: lib.rs
control/drivers/kicker-programmer/: Cargo.toml
control/drivers/kicker-programmer/src/: binary.rs  fuse.rs  kicker_bin.rs  kicker_bin_kick_on_bb.rs  lib.rs
control/drivers/kicker/src/: command.rs  driver.rs  lib.rs  programmer.rs
control/drivers/motion/: Cargo.toml
control/drivers/motion/src/: lib.rs  motion_control.rs  pid.rs
control/drivers/rotary_switch/: Cargo.toml
control/drivers/rotary_switch/src/: lib.rs
control/examples/: adc_demo.rs  all_motors.rs  alt_manual.rs  alt_radio_receive_test.rs  ball_speed_measurement.rs  battery_test.rs  check_control_board.rs  cont_laser_diode.rs  demo.rs  display_test.rs  display_text.rs  dma_uart.rs  enable.rs  encoder_demo.rs  examples.md  fake_spi.rs  forward.rs  fpga_demo.rs  gpt_timer_test.rs  i2c_colorsensor.rs  i2c_switch.rs  icm42605.rs  icm_kalman_test.rs  kicker_demo.rs  kicker_on_breakbeam.rs  kicker_program.rs  kicker_test.rs  lipo_test.rs  manual.rs  manual_2.rs  mock.rs  mock_manual.rs  motor_move_test.rs  motor_uart.rs  motor_uart_pid.rs  ping_pong.rs  ping_pong_tx.rs  pit_freq.rs  pulsed_laser_diode.rs  radio_receive_benchmark.rs  (+13 more)
control/graphics/: Cargo.toml
control/graphics/battery_indicator/: Cargo.toml
control/graphics/battery_indicator/src/: lib.rs
control/graphics/src/: battery_indicator.rs  error_screen.rs  lib.rs  main_window.rs  startup_screen.rs
control/graphics/startup_graphic/: Cargo.toml
control/graphics/startup_graphic/src/: lib.rs
control/graphics/windows/main_window/: Cargo.toml
control/graphics/windows/main_window/src/: lib.rs
control/src/: clock.rs  errors.rs  lib.rs  main.rs  motion_control.rs  motors.rs  peripherals.rs  radio.rs  robot.rs  selector.rs  spi.rs
control/src/radio/: addresses.rs  control_message.rs  robot_status.rs
control/tools/: runner.rs
control/util/: motion_control_test.py
controller/: Cargo.toml
controller/src/: drive_mod.rs  main.rs  module_drive.rs  module_imu.rs  module_menu.rs  module_recieve_benchmark.rs  module_types.rs  module_util.rs  types.rs  util.rs
controller/tools/: Cargo.toml  runner.rs
drivers/battery_module/: Cargo.toml
drivers/battery_module/src/: lib.rs
drivers/battery_sense/: Cargo.toml
drivers/battery_sense/src/: error.rs  lib.rs
drivers/fpga/: Cargo.toml
drivers/fpga/src/: command.rs  config_bin.rs  duty_cycle.rs  error.rs  init_command.rs  instructions.rs  lib.rs  structs.rs
drivers/icm42605-driver/: Cargo.toml
drivers/icm42605-driver/src/: lib.rs  registers.rs
drivers/kicker/: Cargo.toml
drivers/kicker/src/: command.rs  error.rs  lib.rs  status.rs
drivers/rotary_switch/: Cargo.toml
drivers/rotary_switch/src/: error.rs  lib.rs
examples/: MCP23017.rs  alt_fpga_directions.rs  alt_fpga_test.rs  battery_demo.rs  battery_test.rs  blocking_i2c.rs  collect.rs  controller.rs  demo.rs  diagnostics.rs  encoder_demo.rs  fake_spi.rs  forward.rs  fpga.rs  fpga_demo.rs  fpga_directions.rs  fpga_other_spi.rs  fpga_ramp_up.rs  fpga_test.rs  fpga_tuning.rs  gpt_timer_test.rs  i2c_test.rs  icm42605.rs  kicker.rs  kicker_board.rs  kicker_program.rs  led.rs  ledDriver.rs  manual-trapazoid.rs  manual.rs  mcp23017_demo.rs  mock.rs  mock_manual.rs  motor_driver_uart.rs  nrf_test.rs  ping_pong.rs  radio_benchmark.rs  radio_init.rs  radio_receive_benchmark.rs  radio_receive_poll.rs  (+17 more)
kicker/: .gitignore  CMakeLists.txt  config.hpp  convert.py  devttyACM0_2026_03_14.21.21.58.428.txt  devttyACM0_2026_03_14.21.22.55.920.txt  kicker.cpp  kicker.hpp  pins.hpp
kicker-program/: AVR910Programming.ino
motor-controller/: Cargo.toml  data.txt  memory.x
motor-controller/.cargo/: config.toml
motor-controller/examples/: big_jump.rs  blink.rs  bode.rs  dribbler_control.rs  dribbler_test.rs  encoders.rs  hal_readings.rs  motor_movement.rs  motor_state.rs  multiple_setpoints.rs  one_phase.rs  one_phase_test.rs  overcurrent_test.rs  parameter_estimation.rs  pid.rs  pwm_complementary.rs  timer_test.rs  uart_communication.rs  uart_control.rs  uart_echo.rs  uart_test.rs  uart_write.rs
motor-controller/modules/motion-control/: Cargo.toml
motor-controller/modules/motion-control/src/: lib.rs
motor-controller/src/: encoder.rs  lib.rs  main.rs  pid.rs
setup/: WindowsSetup.md  ubuntu-setup.sh  unix.sh
src/: clock.rs  collect.rs  errors.rs  lib.rs  main.rs  motion_control.rs  peripherals.rs  radio.rs  robot.rs  spi.rs  spi_config.rs
tools/: read_data.py  runner.rs
util/: motion_control_test.py  serial_read.py
(+45 files in other folders)
