# this is our root package :)
[package]
name = "main"
version = "0.1.0"
authors = ["celcius-plus-273 <kelvinandreshau@gmail.com>"]
edition = "2021"

# dependencies for the root package which we'll call the "main" package
[dependencies]
cortex-m = "0.7" # basic hal package for cortex m microcontroller boards
log = "0.4" # allows for the logging feautre (a.k.a printing to the serial port)
teensy4-pins = "0.3.1"
imxrt-iomuxc = "0.2.2"
sx127 = { git = "https://github.com/N8BWert/sx127" }
rtic-nrf24l01 = { path = "../rtic-nrf24l01", default-features = false, features = ["systick"] }
embedded-alloc = "0.5.0"
defmt = "0.3.5"
libm = "0.2.8"

[dependencies.nalgebra]
version = "0.32.3"
default-features = false
features = ["libm", "nalgebra-macros", "alloc"]

[dependencies.packed_struct]
version = "0.10.1"
default-features = false
features = ["alloc"]

[dependencies.robojackets-robocup-rtp]
version = "0.1.3"
default-features = false
features = ["nostd"]

[dependencies.embedded-hal]
version = "~0.2"
features = ["unproven"]

# RTIC 2.0 dependencies
[dependencies.rtic]
version = "2.0.1"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "1.0.0"
features = ["cortex-m-systick"]

# teensy4-bsp is the board support package for teensy 4.0/4.1
[dependencies.teensy4-bsp]
version = "0.4"
features = [
    # Use the BSP's runtime. This lets you write your
    # `main()` function.
    "rt",
    # Remove me if you don't want logging.
    "usb-logging",
]

# allows for debugging messages when panicking
[dependencies.teensy4-panic]
version = "0.2"
features = ["log"]

# this is an example of how to include a local package as a dependency
[dependencies.fpga-rs]
path = "drivers/fpga"

# the root package is also a workspace that holds all of the neccesary "supporting" packages
# such as driver files, utility files (e.g. tools), etc.
[workspace]
members = [
    "drivers/fpga",
    "tools",
]

# overrides the release build optimization level
# this can be deleted if higher optimization is wanted
# NOTE: lower optimization yields a faster build time
[profile.release.build-override]
opt-level = 0

[features]
default = ["robot-0"]
# The robot id features are more for testing than anything else
robot-0 = []
robot-1 = []
robot-2 = []
robot-3 = []
robot-4 = []
robot-5 = []