[package]
name = "robocup-rustware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
embedded-hal = "0.2"
log = "0.4"
teensy4-pins = "0.3.1"
icm42605-driver = { path = "./drivers/icm42605-driver" }

[dependencies.teensy4-bsp]
version = "0.4"
features = ["rt"]

[dependencies.rtic]
version = "2.0.1"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "1.0.0"
features = ["cortex-m-systick"]

[dependencies.teensy4-panic]
version = "0.2"
features = ["log"]

[workspace]
members = [
    "tools",
    "drivers/icm42605-driver"
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
