# this is our root package :)
[package]
name = "robojackets-robocup-control"
version = "0.2.0"
authors = ["N8BWert <n8.wert.b@gmail.com", "celcius-plus-273 <kelvinandreshau@gmail.com>"]
edition = "2021"

# dependencies for the root package which we'll call the "main" package
[dependencies]
cortex-m = "0.7" # basic hal package for cortex m microcontroller boards
log = "0.4" # allows for the logging feautre (a.k.a printing to the serial port)
teensy4-pins = "0.3.1"
icm42605-driver = { path = "./drivers/icm42605-driver" }
rotary_switch_rs = { path = "drivers/rotary_switch" }
io_expander_rs = { path = "drivers/io_expander" }
imxrt-iomuxc = "0.2.2"
embedded-alloc = "0.5.0"
defmt = "0.3.5"
libm = "0.2.8"
fixed-queue = "0.5.1"
rtic-sync = "1.3.2"
common = { path = "../common" }
nb = "1.1.0"
embedded-io = "0.6.1"
battery_sense_rs = { version = "0.1.0", path = "drivers/battery_sense" }
embedded-graphics = "0.7.0"
graphics = {path = "drivers/graphics"}
ssd1306 = "0.7.1"

[dependencies.rtic-nrf24l01]
git = "https://github.com/N8BWert/rtic-nrf24l01.git"
default-features = false
features = ["embedded-hal-02"]

[dependencies.nalgebra]
version = "0.33.0"
default-features = false
features = ["libm", "nalgebra-macros", "alloc"]

[dependencies.shared-bus]
version = "0.3.1"
features = ["cortex-m"]

[dependencies.ncomm-utils]
version = "1.0.0"
default-features = false
features = ["nostd"]

[dependencies.robojackets-robocup-rtp]
version = "0.6.3"

[dependencies.embedded-hal]
version = "~0.2"
features = ["unproven"]

# RTIC 2.0 dependencies
[dependencies.rtic]
version = "2.0.1"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "1.0.0"
features = ["cortex-m-systick"]

# teensy4-bsp is the board support package for teensy 4.0/4.1
[dependencies.teensy4-bsp]
version = "^0.4"
features = [
    # Use the BSP's runtime. This lets you write your
    # `main()` function.
    "rt",
    # Remove me if you don't want logging.
    "usb-logging",
]

[dependencies.imxrt-hal]
version = "=0.5.4"

# allows for debugging messages when panicking
[dependencies.teensy4-panic]
version = "0.2"
features = ["log"]

# this is an example of how to include a local package as a dependency
[dependencies.fpga-rs]
path = "drivers/fpga"

[dependencies.motion]
path = "drivers/motion"

[dependencies.controller]
path = "drivers/controller"

[dependencies.kicker-programmer]
path = "drivers/kicker-programmer"

[dependencies.kicker-controller]
path = "drivers/kicker-controller"

# the root package is also a workspace that holds all of the neccesary "supporting" packages
# such as driver files, utility files (e.g. tools), etc.
[workspace]
members = [
    "tools",
    "drivers/fpga",
    "drivers/motion",
    "drivers/controller",
    "drivers/icm42605-driver",
    "drivers/io_expander",
    "drivers/rotary_switch",
    "tools",
    "drivers/kicker-programmer",
    "drivers/kicker-controller",
    "drivers/battery_sense",
    "drivers/graphics",
]

# overrides the release build optimization level
# this can be deleted if higher optimization is wanted
# NOTE: lower optimization yields a faster build time
[profile.release.build-override]
opt-level = 0

[features]
default = ["all-motors"]
# The robot id features are more for testing than anything else
robot-0 = []
robot-1 = []
robot-2 = []
robot-3 = []
robot-4 = []
robot-5 = []
yellow-team = []
blue-team = []
debug = []
up = []
down = []
right = []
left = []
clockwise = []
counterclockwise = []
motor-1 = []
motor-2 = []
motor-3 = []
motor-4 = []
dribbler = []
all-motors = ["motor-1", "motor-2", "motor-3", "motor-4", "dribbler"]

