# this is our root package :)
[package]
name = "main"
version = "0.1.0"
authors = ["celcius-plus-273 <kelvinandreshau@gmail.com>"]
edition = "2021"

# dependencies for the root package which we'll call the "main" package
[dependencies]
cortex-m = "0.7" # basic hal package for cortex m microcontroller boards
log = "0.4" # allows for the logging feautre (a.k.a printing to the serial port)
teensy4-pins = "0.3.1"
imxrt-iomuxc = "0.2.2"
rtic-nrf24l01 = { git = "https://github.com/N8BWert/rtic-nrf24l01.git" }
embedded-alloc = "0.5.0"
defmt = "0.3.5"
libm = "0.2.8"
fixed-queue = "0.5.1"

[dependencies.nalgebra]
version = "0.33.0"
default-features = false
features = ["libm", "nalgebra-macros", "alloc"]

[dependencies.ncomm-utils]
version = "1.0.0"
default-features = false
features = ["nostd"]

[dependencies.robojackets-robocup-rtp]
version = "0.5.1"

[dependencies.embedded-hal]
version = "~0.2"
features = ["unproven"]

# RTIC 2.0 dependencies
[dependencies.rtic]
version = "2.0.1"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "1.0.0"
features = ["cortex-m-systick"]

# teensy4-bsp is the board support package for teensy 4.0/4.1
[dependencies.teensy4-bsp]
version = "=0.4.5"
features = [
    # Use the BSP's runtime. This lets you write your
    # `main()` function.
    "rt",
    # Remove me if you don't want logging.
    "usb-logging",
]

[dependencies.imxrt-hal]
version = "=0.5.4"

# allows for debugging messages when panicking
[dependencies.teensy4-panic]
version = "0.2"
features = ["log"]