[package]
name = "motor-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
nb = { version = "1.1.0", features = ["defmt-0-3"] }
panic-probe = "0.3.2"
portable-atomic = { version = "1.10.0", features = ["unsafe-assume-single-core"] }
rtic = { version = "2.1.2", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2.0.3", features = ["defmt", "stm32f031c6", "stm32_tim2"] }
stm32f0xx-hal = { git = "https://github.com/stm32-rs/stm32f0xx-hal.git", features = ["stm32f031"] }
