[package]
name = "fpga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
defmt = "0.3.5"
defmt-macros = "0.3.5"
fugit = "0.3.7"
imxrt-hal = "0.5.3"

[dependencies.rtic-monotonics]
version = "1.0.0"
features = ["cortex-m-systick"]

[dependencies.spi_config]
path = "../spi_config"

[features]
default = []