[package]
name = "icm42605-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
embedded-hal = "0.2.7"
nb = "1.1.0"
rtic-monotonics = { version = "1.2.0", features = ["cortex-m-systick"] }
