[package]
name = "kicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "~0.2"

[dependencies.robojackets-robocup-rtp]
version = "0.4.1"
default-features = false
features = ["nostd"]