[package]
name = "icm42605"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.10.0"
embedded-hal = "1.0.0"
embassy-embedded-hal = "0.5.0"
embassy-sync = "0.7.2"
defmt = { version = "1.0.1" }
embedded-hal-bus = "0.3.0"


