[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.nalgebra]
version = "0.32.3"
default-features = false
features = ["libm", "nalgebra-macros"]

[dependencies.embedded-hal]
version = "~0.2"
features = ["unproven"]

[dependencies.teensy4-bsp]
version = "0.4.5"
features = [
    # Use the BSP's runtime. This lets you write your
    # `main()` function.
    "rt"
]